Finished Ymal and source code fxing
