# src/LudoWebAPI/Controllers/LudoController.cs
@@ -35,8 +35,8 @@ namespace LudoWebAPI.Controllers
         [HttpGet("{gameId}")]
         public ActionResult<LudoGame> GetGame(int gameId)
         {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId not found");
 
             return Ok((LudoGame)Game.activeGames[gameId]);
         }
@@ -45,27 +45,22 @@ namespace LudoWebAPI.Controllers
         [HttpPut("{gameId}")]
         public ActionResult<bool> StartGame(int gameId)
         {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
 
             var gameState = Game.activeGames[gameId].GetGameState();
 
             if (gameState != GameState.NotStarted)
             {
-                return NotFound("Unable to start game since it has the state " + gameState + ". Only NotStarted games can be started");
+                return Unauthorized("Unable to start game since it has the state " + gameState + ". Only NotStarted games can be started");
             }
 
             var players = Game.activeGames[gameId].GetPlayers();
 
-            if (players.Count() < 2)
+            if (players.Count() < 2 || players.Count() > 4)
             {
-                return NotFound("Atleast two players is needed to start the game");
-            }
-
-            if (players.Count() > 4)
-            {
-                return NotFound("A max of four players can be in the game");
-            }
+                return BadRequest("Plyers must be more than 2 and maximum of 4");
+            }           
 
             return Ok(Game.activeGames[gameId].StartGame());
         }
@@ -73,10 +68,10 @@ namespace LudoWebAPI.Controllers
         // DELETE api/ludo/2
         [HttpDelete("{gameId}")]
         public ActionResult<string> Delete(int gameId)
-        {   
-            if (gameId > Game.activeGames.Count || gameId < 1)            
-                return BadRequest("gameId is out of range");
-            
+        {
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
+
             Game.activeGames.Remove(gameId);
             return Ok("Game " + gameId + " deleted.");
         }
@@ -85,15 +80,15 @@ namespace LudoWebAPI.Controllers
         [HttpGet("{gameId}/roll")]
         public ActionResult<int> RollDiece(int gameId)
         {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
 
             var game = Game.activeGames[gameId];
             var state = game.GetGameState();
 
             if (state != GameState.Started)
             {
-                return NotFound("Unable roll diece since the game is not started, it's current state is: " + state);
+                return Unauthorized("Unable roll diece since the game is not started, it's current state is: " + state);
             }
 
             return Ok(game.RollDiece());
@@ -103,8 +98,8 @@ namespace LudoWebAPI.Controllers
         [HttpGet("{gameId}/state")]
         public ActionResult<int> GetGameState(int gameId)
         {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
 
             return Ok(Game.activeGames[gameId].GetGameState());
         }
@@ -113,20 +108,20 @@ namespace LudoWebAPI.Controllers
         [HttpPut("{gameId}/movepiece")]
         public ActionResult<string> MovePiece(int gameId, int pieceId, int roll)
         {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
 
             var game = Game.activeGames[gameId];
             var state = game.GetGameState();
 
             if (state == GameState.Ended)
             {
-                return NotFound("Game is ended, and a winner is found");
+                return Unauthorized("Game is ended, and a winner is found");
             }
 
             if (state == GameState.NotStarted)
             {
-                return NotFound("Game is not yet started, please start the game");
+                return Unauthorized("Game is not yet started, please start the game");
             }
 
             Player player = game.GetCurrentPlayer();
@@ -134,7 +129,7 @@ namespace LudoWebAPI.Controllers
 
             if (piece.State == PieceGameState.Goal)
             {
-                return NotFound("Piece is in Goal and unable to move");
+                return Unauthorized("Piece is in Goal and unable to move");
             }
 
             game.MovePiece(player, pieceId, roll);
@@ -152,7 +147,7 @@ namespace LudoWebAPI.Controllers
 
             if (player != null)
             {
-                return Ok("Piece moved and we have a winner. The winner is " + player.Name);
+                return Ok("The winner is " + player.Name);
             }
 
             return Ok("Piece moved");
@@ -162,8 +157,8 @@ namespace LudoWebAPI.Controllers
         [HttpGet("{gameId}/allpieces")]
         public ActionResult<Piece[]> GetAllPieces(int gameId)
         {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
 
             var game = Game.activeGames[gameId];
             return Ok(game.GetAllPiecesInGame());            
@@ -173,18 +168,72 @@ namespace LudoWebAPI.Controllers
         [HttpGet("{gameId}/player")]
         public ActionResult<IEnumerable<Player[]>> GetPlayers(int gameId)
         {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
 
             return Ok(Game.activeGames[gameId].GetPlayers());
+        }
+
+        // POST api/ludo/2/player?name=Brad&color=red
+        [HttpPost("{gameId}/player")]
+        public ActionResult<string> AddPlayer(int gameId, string name, PlayerColor color)
+        {
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
+
+            var gameState = Game.activeGames[gameId].GetGameState();
+            if (gameState != GameState.NotStarted)
+            {
+                return Unauthorized("Unable to add player since game is " + gameState);
+            }
+
+            var player = Game.activeGames[gameId].AddPlayer(name, color);
+            if (player == null)
+            {
+                return Unauthorized("The color is already used by another player");
+            }
+
+            return Ok("New player added. Name: " + name + ", Color: " + color);
+        }
+
+        // GET api/ludo/2/player/current
+        [HttpGet("{gameId}/player/current")]
+        public ActionResult<Player> GetCurrentPlayer(int gameId)
+        {
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
+
+            if (Game.activeGames[gameId].GetGameState() == GameState.NotStarted)
+            {
+                return NotFound("The game has not started yet");
+            }
+
+            return Ok(Game.activeGames[gameId].GetCurrentPlayer());
+        }
+
+        // PUT api/ludo/2/player/2/endturn
+        [HttpPut("{gameId}/player/{playerId}/endturn")]
+        public ActionResult<Player> EndTurn(int gameId, int playerId)
+        {
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
+
+            var currentPlayer = Game.activeGames[gameId].GetCurrentPlayer();
+
+            if (playerId != currentPlayer.PlayerId)            
+                return Unauthorized($"Wrong player, it's currently {currentPlayer.PlayerId}");
+
+            Game.activeGames[gameId].EndTurn(currentPlayer);
+
+            return Ok("Turn ended and check for a winner done");
         }
 
         // GET api/ludo/2/winner
         [HttpGet("{gameId}/winner")]
         public ActionResult<Player> GetWinner(int gameId)
         {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
 
             var player = Game.activeGames[gameId].GetWinner();
 
@@ -195,34 +244,12 @@ namespace LudoWebAPI.Controllers
             return Ok("Winner Found");
         }
 
-        // POST api/ludo/2/player?name=Brad&color=red
-        [HttpPost("{gameId}/player")]
-        public ActionResult<string> AddPlayer(int gameId, string name, PlayerColor color)
-        {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
-
-            var gameState = Game.activeGames[gameId].GetGameState();
-            if (gameState != GameState.NotStarted)
-            {
-                return NotFound("Unable to add player since game is " + gameState);
-            }
-
-            var player = Game.activeGames[gameId].AddPlayer(name, color);
-            if (player == null)
-            {
-                return NotFound("The color is already used by another player");
-            }
-
-            return Ok("New player added. Name: " + name + ", Color: " + color);
-        }
-
         // GET api/ludo/2/player/2
         [HttpGet("{gameId}/player/{playerId}")]
         public ActionResult<Player> GetPlayer(int gameId, int playerId)
         {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
+            if (!Game.activeGames.ContainsKey(gameId))
+                return NotFound("gameId is not found");
 
             var players = Game.activeGames[gameId].GetPlayers();
 
@@ -232,24 +259,9 @@ namespace LudoWebAPI.Controllers
             }
 
             if (playerId > (players.Count() -1) || playerId < 0)
-                return BadRequest("playerId is out of range");
+                return NotFound("Player not found");
 
             return Ok(players[playerId]);
-        }
-
-        // GET api/ludo/2/player/current
-        [HttpGet("{gameId}/player/current")]
-        public ActionResult<Player> GetCurrentPlayer(int gameId)
-        {
-            if (gameId > Game.activeGames.Count || gameId < 1)
-                return BadRequest("gameId is out of range");
-
-            if (Game.activeGames[gameId].GetGameState() == GameState.NotStarted)
-            {
-                return NotFound("The game has not started yet");
-            }
-
-            return Ok(Game.activeGames[gameId].GetCurrentPlayer());
         }
     }
 }
